<resources>
    <string name="app_name">Skeera</string>
    <string name="skeera_logo">Skeera Logo</string>
    <string name="login_background">Login Background</string>
    <string name="enter_your_email">Enter Your Email*</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter Your Password*</string>
    <string name="access_your_account">Access Your Account</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="enter_your_username">Enter Your Username*</string>
    <string name="confirm_your_password">Confirm Your Password*</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_skeera_your_score_keeper">Welcome to Skeera App\nYour Score Keeper!</string>
    <string name="score_games">Score Games</string>
    <string name="football">Football</string>
    <string name="volleyball">Volleyball</string>
    <string name="tennis">Tennis</string>
    <string name="squash">Squash</string>
    <string name="actions">Actions</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="rate_us">Rate us</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>