<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.auth.RegisterActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/login_background"
        android:src="@drawable/register_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/create_your_account"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="220dp"
            android:layout_height="5dp"
            android:layout_marginBottom="25dp"
            android:background="@color/colorBackground" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:background="@drawable/enter_field"
            android:hint="@string/enter_your_username"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:background="@drawable/enter_field"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:background="@drawable/enter_field"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/register_password_confirm"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:background="@drawable/enter_field"
            android:hint="@string/confirm_your_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@id/register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient_btn"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>