<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/login_background"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="210dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/access_your_account"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <View
            android:layout_width="220dp"
            android:layout_height="5dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorBackground" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:background="@drawable/enter_field"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:background="@drawable/enter_field"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient_btn"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <View
                android:layout_width="130dp"
                android:layout_height="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorBackground" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/or"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <View
                android:layout_width="130dp"
                android:layout_height="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/colorBackground" />

        </LinearLayout>

        <TextView
            android:id="@+id/register"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/gradient_btn"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>